tests/snapshots/simplified_ast_tests__calc.snap
---
source: tests/simplified_ast_tests.rs
assertion_line: 29
expression: "format!(\"{:#?}\", simple_ast)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "a",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "1",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "b",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "2",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "c",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "3",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "d",
                        expression: Some(
                            BinaryOperator {
                                typ: (),
                                left: BinaryOperator {
                                    typ: (),
                                    left: Variable {
                                        typ: (),
                                        name: "a",
                                    },
                                    operator: Sub,
                                    right: Variable {
                                        typ: (),
                                        name: "b",
                                    },
                                },
                                operator: Multiply,
                                right: Variable {
                                    typ: (),
                                    name: "c",
                                },
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            Variable {
                                typ: (),
                                name: "d",
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
    ],
}
