tests/snapshots/simplified_ast_tests__for.snap
---
source: tests/simplified_ast_tests.rs
expression: "format!(\"{:#?}\", simple_ast)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "x",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "0",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Scope,
                    children: [
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Int,
                                name: "i",
                                expression: Some(
                                    Literal {
                                        typ: (),
                                        value: "0",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: While {
                                condition: BinaryOperator {
                                    typ: (),
                                    left: Variable {
                                        typ: (),
                                        name: "i",
                                    },
                                    operator: Less,
                                    right: Literal {
                                        typ: (),
                                        value: "10",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Assign {
                                            typ: (),
                                            name: "x",
                                            value: BinaryOperator {
                                                typ: (),
                                                left: Variable {
                                                    typ: (),
                                                    name: "x",
                                                },
                                                operator: Add,
                                                right: Literal {
                                                    typ: (),
                                                    value: "2",
                                                },
                                            },
                                        },
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Increment {
                                            typ: (),
                                            expression: Variable {
                                                typ: (),
                                                name: "i",
                                            },
                                            postfix: true,
                                        },
                                    },
                                    children: [],
                                },
                            ],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            Variable {
                                typ: (),
                                name: "x",
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
    ],
}
