tests/snapshots/simplified_ast_tests__return.snap
---
source: tests/simplified_ast_tests.rs
expression: "format!(\"{:#?}\", simple_ast)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Void,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: If {
                        condition: Literal {
                            typ: (),
                            value: "false",
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: None,
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Else,
                            children: [
                                AbstractSyntaxTree {
                                    node: If {
                                        condition: Literal {
                                            typ: (),
                                            value: "false",
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Return {
                                                value: None,
                                            },
                                            children: [],
                                        },
                                        AbstractSyntaxTree {
                                            node: Else,
                                            children: [
                                                AbstractSyntaxTree {
                                                    node: Return {
                                                        value: None,
                                                    },
                                                    children: [],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
