tests/snapshots/simplified_ast_tests__scopes.snap
---
source: tests/simplified_ast_tests.rs
expression: "format!(\"{:#?}\", simple_ast)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "f",
                arguments: [
                    Variable {
                        name: "x",
                        typ: Int,
                    },
                ],
            },
            children: [
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            BinaryOperator {
                                typ: (),
                                left: Variable {
                                    typ: (),
                                    name: "x",
                                },
                                operator: Add,
                                right: Literal {
                                    typ: (),
                                    value: "5",
                                },
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
        AbstractSyntaxTree {
            node: Callable {
                result_type: Void,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "x",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "0",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "b",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "1",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: If {
                        condition: BinaryOperator {
                            typ: (),
                            left: Variable {
                                typ: (),
                                name: "x",
                            },
                            operator: Greater,
                            right: Variable {
                                typ: (),
                                name: "b",
                            },
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: If {
                                condition: BinaryOperator {
                                    typ: (),
                                    left: BinaryOperator {
                                        typ: (),
                                        left: Variable {
                                            typ: (),
                                            name: "x",
                                        },
                                        operator: Add,
                                        right: Literal {
                                            typ: (),
                                            value: "1",
                                        },
                                    },
                                    operator: Greater,
                                    right: Variable {
                                        typ: (),
                                        name: "b",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Else,
                                    children: [],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Else,
                            children: [
                                AbstractSyntaxTree {
                                    node: If {
                                        condition: BinaryOperator {
                                            typ: (),
                                            left: Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                            operator: Less,
                                            right: Variable {
                                                typ: (),
                                                name: "b",
                                            },
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Else,
                                            children: [],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: While {
                        condition: Literal {
                            typ: (),
                            value: "true",
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: If {
                                condition: BinaryOperator {
                                    typ: (),
                                    left: Variable {
                                        typ: (),
                                        name: "x",
                                    },
                                    operator: Equal,
                                    right: Literal {
                                        typ: (),
                                        value: "9",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Increment {
                                            typ: (),
                                            expression: Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                            postfix: true,
                                        },
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: Else,
                                    children: [
                                        AbstractSyntaxTree {
                                            node: If {
                                                condition: BinaryOperator {
                                                    typ: (),
                                                    left: Variable {
                                                        typ: (),
                                                        name: "x",
                                                    },
                                                    operator: Equal,
                                                    right: Literal {
                                                        typ: (),
                                                        value: "10",
                                                    },
                                                },
                                            },
                                            children: [
                                                AbstractSyntaxTree {
                                                    node: Break,
                                                    children: [],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Expression {
                                expression: Assign {
                                    typ: (),
                                    name: "x",
                                    value: FunctionCall {
                                        typ: (),
                                        name: "f",
                                        arguments: [
                                            BinaryOperator {
                                                typ: (),
                                                left: Variable {
                                                    typ: (),
                                                    name: "x",
                                                },
                                                operator: Add,
                                                right: Literal {
                                                    typ: (),
                                                    value: "1",
                                                },
                                            },
                                        ],
                                    },
                                },
                            },
                            children: [],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Scope,
                    children: [
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Int,
                                name: "i",
                                expression: Some(
                                    Literal {
                                        typ: (),
                                        value: "2",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: While {
                                condition: BinaryOperator {
                                    typ: (),
                                    left: Variable {
                                        typ: (),
                                        name: "i",
                                    },
                                    operator: Less,
                                    right: Literal {
                                        typ: (),
                                        value: "10",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: BinaryOperator {
                                            typ: (),
                                            left: Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                            operator: Add,
                                            right: BinaryOperator {
                                                typ: (),
                                                left: Variable {
                                                    typ: (),
                                                    name: "x",
                                                },
                                                operator: Add,
                                                right: Literal {
                                                    typ: (),
                                                    value: "2",
                                                },
                                            },
                                        },
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Increment {
                                            typ: (),
                                            expression: Variable {
                                                typ: (),
                                                name: "i",
                                            },
                                            postfix: true,
                                        },
                                    },
                                    children: [],
                                },
                            ],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: None,
                    },
                    children: [],
                },
            ],
        },
    ],
}
