tests/snapshots/simplified_ast_tests__while.snap
---
source: tests/simplified_ast_tests.rs
expression: "format!(\"{:#?}\", simple_ast)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "f",
                arguments: [
                    Variable {
                        name: "x",
                        typ: Int,
                    },
                ],
            },
            children: [
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            BinaryOperator {
                                typ: (),
                                left: Variable {
                                    typ: (),
                                    name: "x",
                                },
                                operator: Add,
                                right: Literal {
                                    typ: (),
                                    value: "5",
                                },
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "x",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "0",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: While {
                        condition: Literal {
                            typ: (),
                            value: "true",
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: If {
                                condition: BinaryOperator {
                                    typ: (),
                                    left: Variable {
                                        typ: (),
                                        name: "x",
                                    },
                                    operator: Equal,
                                    right: Literal {
                                        typ: (),
                                        value: "9",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Increment {
                                            typ: (),
                                            expression: Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                            postfix: true,
                                        },
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: Else,
                                    children: [
                                        AbstractSyntaxTree {
                                            node: If {
                                                condition: BinaryOperator {
                                                    typ: (),
                                                    left: Variable {
                                                        typ: (),
                                                        name: "x",
                                                    },
                                                    operator: Equal,
                                                    right: Literal {
                                                        typ: (),
                                                        value: "10",
                                                    },
                                                },
                                            },
                                            children: [
                                                AbstractSyntaxTree {
                                                    node: Break,
                                                    children: [],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Expression {
                                expression: Assign {
                                    typ: (),
                                    name: "x",
                                    value: FunctionCall {
                                        typ: (),
                                        name: "f",
                                        arguments: [
                                            Variable {
                                                typ: (),
                                                name: "x",
                                            },
                                        ],
                                    },
                                },
                            },
                            children: [],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            Variable {
                                typ: (),
                                name: "x",
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
    ],
}
